<?xml version="1.0"?>
<package>
  <name>point_cloud_frame_test</name>
  <version>0.0.0</version>
  <description>Test subscription to point clouds and the tf frame_ids in them.</description>

  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <license>BSD</license>

  <author email="hersh@willowgarage.com">Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

</package>
